# filmemo

./: .gitignore  Dockerfile  README.md  filmemo.code-workspace
.github/workflows/: docker-build-and-push.yml  test-api.yml  ui-build-and-deploy.yml
api/: README.md  pyproject.toml
api/api/: constants.py  main.py
api/api/bal/: game_manager.py
api/api/dal/: database.py  firestore.py
api/api/errors/: database.py  game.py
api/api/lib/: chatgpt.py  config.py  movies.py
api/api/models/: game.py
api/tests/: test_game_manager.py
deployment/: Dockerfile
filmemo-ui/: .env.production  README.md  index.html  package-lock.json  package.json
filmemo-ui/src/: App.vue  main.ts
filmemo-ui/src/components/: AddPlayer.vue  AvatarSelector.vue  CreateGame.vue  InfoCard.vue  MovieCard.vue  ShareGame.vue
filmemo-ui/src/router/: index.ts
filmemo-ui/src/stores/: game.ts  user.ts
filmemo-ui/src/utils/: constants.ts
filmemo-ui/src/views/: AboutView.vue  GameRoom.vue  HomeView.vue  PlayerJoin.vue  ResultsView.vue
