[tool.poetry]
name = "api"
version = "0.1.0"
description = "api for filmemo party game"
authors = ["platput <plato@techtuft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
google-cloud-firestore = "^2.10.0"
websockets = "^10.4"
numpy = "^1.24.2"
openai = "^0.27.2"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
coverage = "^7.2.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
